--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Sparking The Fire Podcast</title>
+    <link rel="shortcut icon" type="image/png" href="images/Favicon.png"
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -490,7 +491,7 @@
         </div>
       </div>
     </div>
-
+    <img scr="images/Favicon.png">
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
