--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
       </div>
     </div>
     <img scr="images/Favicon.png">
+<rssapp-wall id="xSFkhKnka3GDRECg"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
