--- a/index.html
+++ b/index.html
@@ -36,65 +36,17 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
-    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5"> 
       <div class="container">
-        <div class="row align-items-center justify-content-center text-center">
+        <div class="row align-items-center justify-content-center text-center"
           <div class="col-md-7" data-aos="fade-up" data-aos-delay="400">
             <h2 class="text-white font-weight-light mb-2 display-4">Sparking The Fire Podcast</h2>
           </div>
-        </div>
+        </div
       </div>
     </div>  
 
-    <div class="site-section bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="text-center mb-5" data-aos="fade-up" style="-webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; max-width: 100%; margin-bottom: 5%">
-            <h2 class="display-4 mb-5 text-black">The Podcasters</h2>
-          </div>
-          <div class="col-lg-4 text-center" data-aos="fade-up">
-            <img src="images/person_1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
-            <h2 class="text-black font-weight-light mb-4">Alex</h2>
-	    <p>Podcast editor <br>Player</p>
-            <p>
-              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
-            </p>
-          </div>
-          <div class="col-lg-4 text-center" data-aos="fade-up">
-            <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
-            <h2 class="text-black font-weight-light mb-4">Reid</h2>
-	    <p>Website Developer <br>Player</p>
-            <p>
-              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
-            </p>
-          </div>
-          <div class="col-lg-4 text-center" data-aos="fade-up">
-            <img src="images/person_4.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
-            <h2 class="text-black font-weight-light mb-4">Logan</h2>
-            <p>Dungon Master</p>
-            <p>
-              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
-            </p>
-          </div>
-           <div class="col-lg-4 text-center" data-aos="fade-up">
-            <img src="images/person_4.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
-            <h2 class="text-black font-weight-light mb-4">Jamal</h2>
-            <p>Player</p>
-            <p>
-              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+   
 
     <div class="site-section">
       <div class="container">
@@ -103,12 +55,10 @@
             <img src="images/hero_bg_1.jpg" alt="Image" class="img-fluid mb-5">
           </div>
           <div class="col-md-6">
-            <p class="lead">Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipisicing elit. Asperiores veritatis quis cumque? Obcaecati quisquam incidunt minima magnam quod quis saepe.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id accusamus eos quisquam incidunt ut officia inventore at iste facere perferendis, quidem ratione atque quae. Labore consequuntur nobis minima optio praesentium voluptas non sed beatae, quibusdam neque, recusandae vel, dolorem architecto!</p>
+            <p> The podcast is going to be a DnD podcast that will have multiple seasons with varying ways of playing DnD. For our first season, we will be starting in a natural DnD setting. However, it will still have a twist as we are going to be in a Mortal Kombat like fighting tournament.  Each season will be varying in what the main topic is and what characters we play. We may also switch DM's every season just to keep it extra spicy.</p>
           </div>
           <div class="col-md-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis consectetur quidem enim minima aut laudantium, eum voluptas asperiores, quod minus quasi porro maxime quas ducimus mollitia. Iure nihil dolorum aliquam!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis consectetur quidem enim minima aut laudantium, eum voluptas asperiores, quod minus quasi porro maxime quas ducimus mollitia. Iure nihil dolorum aliquam!</p>
+          <div style=><p>The goal of this podcast is to allow our audience an escape from reality. A time where they can truly relax and live in this fantasy world with us. A time where they can pretend they are in this fantasy world as one of our characters. We hope that this podcast will help people relax and put a smile on their faces.</p>
           </div>
         </div>
       </div>
@@ -359,135 +309,53 @@
       </div>
     </div>
 
-    <div class="site-section">
-      <div class="container" data-aos="fade-up">
-        <div class="row mb-5">
-          <div class="col-md-12 text-center">
-            <h2 class="font-weight-bold text-black">Behind The Mic</h2>
-          </div>
-        </div>
+    </div>
+     <div class="site-section bg-light">
+      <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
-            <div class="team-member">
-
-              <img src="images/person_1.jpg" alt="Image" class="img-fluid">
-
-              <div class="text">
-
-                <h2 class="mb-2 font-weight-light h4">Megan Smith</h2>
-                <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
-                <p>
-                  <a href="#" class="text-white p-2"><span class="icon-facebook"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-twitter"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-linkedin"></span></a>
-                </p>
-              </div>
-
-            </div>
+          <div class="text-center mb-5" data-aos="fade-up" style="-webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; max-width: 100%; margin-bottom: 5%">
+            <h2 class="display-4 mb-5 text-black">The Podcasters</h2>
           </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
-            <div class="team-member">
-
-              <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-
-              <div class="text">
-
-                <h2 class="mb-2 font-weight-light h4">Brooke Cagle</h2>
-                <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
-                <p>
-                  <a href="#" class="text-white p-2"><span class="icon-facebook"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-twitter"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-linkedin"></span></a>
-                </p>
-              </div>
-
-            </div>
+          <div class="col-lg-4 text-center" data-aos="fade-up">
+            <img src="images/person_1.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
+            <h2 class="text-black font-weight-light mb-4">Alex</h2>
+	    <p>Podcast editor <br>Player</p>
+            <p>
+              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+            </p>
           </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
-            <div class="team-member">
-
-              <img src="images/person_3.jpg" alt="Image" class="img-fluid">
-
-              <div class="text">
-
-                <h2 class="mb-2 font-weight-light h4">Philip Martin</h2>
-                <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
-                <p>
-                  <a href="#" class="text-white p-2"><span class="icon-facebook"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-twitter"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-linkedin"></span></a>
-                </p>
-              </div>
-
-            </div>
+          <div class="col-lg-4 text-center" data-aos="fade-up">
+            <img src="images/person_2.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
+            <h2 class="text-black font-weight-light mb-4">Reid</h2>
+	    <p>Website Developer <br>Player</p>
+            <p>
+              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+            </p>
           </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
-            <div class="team-member">
-
-              <img src="images/person_4.jpg" alt="Image" class="img-fluid">
-
-              <div class="text">
-
-                <h2 class="mb-2 font-weight-light h4">Steven Ericson</h2>
-                <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
-                <p>
-                  <a href="#" class="text-white p-2"><span class="icon-facebook"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-twitter"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-linkedin"></span></a>
-                </p>
-              </div>
-
-            </div>
+          <div class="col-lg-4 text-center" data-aos="fade-up">
+            <img src="images/person_4.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
+            <h2 class="text-black font-weight-light mb-4">Logan</h2>
+            <p>Dungon Master</p>
+            <p>
+              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+            </p>
           </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
-            <div class="team-member">
-
-              <img src="images/person_5.jpg" alt="Image" class="img-fluid">
-
-              <div class="text">
-
-                <h2 class="mb-2 font-weight-light h4">Nathan Dumlao</h2>
-                <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
-                <p>
-                  <a href="#" class="text-white p-2"><span class="icon-facebook"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-twitter"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-linkedin"></span></a>
-                </p>
-              </div>
-
-            </div>
+           <div class="col-lg-4 text-center" data-aos="fade-up">
+            <img src="images/person_4.jpg" alt="Image" class="img-fluid w-50 rounded-circle mb-3">
+            <h2 class="text-black font-weight-light mb-4">Jamal</h2>
+            <p>Player</p>
+            <p>
+              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+            </p>
           </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
-            <div class="team-member">
-
-              <img src="images/person_6.jpg" alt="Image" class="img-fluid">
-
-              <div class="text">
-
-                <h2 class="mb-2 font-weight-light h4">Brooke Cagle</h2>
-                <span class="d-block mb-2 text-white-opacity-05">Creative Director</span>
-                <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit ullam reprehenderit nemo.</p>
-                <p>
-                  <a href="#" class="text-white p-2"><span class="icon-facebook"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-twitter"></span></a>
-                  <a href="#" class="text-white p-2"><span class="icon-linkedin"></span></a>
-                </p>
-              </div>
-
-            </div>
-          </div>
-
-
         </div>
       </div>
     </div>
