Description fix and some text added

--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
           <div class="col-md-12">
             <img src="images/hero_bg_1.jpg" alt="Image" class="img-fluid mb-5">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6" style=margin:auto;>
             <p> The podcast is going to be a DnD podcast that will have multiple seasons with varying ways of playing DnD. For our first season, we will be starting in a natural DnD setting. However, it will still have a twist as we are going to be in a Mortal Kombat like fighting tournament.  Each season will be varying in what the main topic is and what characters we play. We may also switch DM's every season just to keep it extra spicy.</p>
-          </div>
-          <div class="col-md-6">
-          <div style=><p>The goal of this podcast is to allow our audience an escape from reality. A time where they can truly relax and live in this fantasy world with us. A time where they can pretend they are in this fantasy world as one of our characters. We hope that this podcast will help people relax and put a smile on their faces.</p>
+            <p>The goal of this podcast is to allow our audience an escape from reality. A time where they can truly relax and live in this fantasy world with us. A time where they can pretend they are in this fantasy world as one of our characters. We hope that this podcast will help people relax and put a smile on their faces.</p>
           </div>
         </div>
       </div>
@@ -201,16 +199,9 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h2 class="text-white font-weight-light mb-2 display-4">Episode 09: How To Create Web Page Using Bootstrap 4</h2>
-            <div class="text-white mb-4"><span class="text-white-opacity-05"><small>By Mike Smith | 16 September 2017 | 1:30:20</small></span></div>
-            <p><a href="single-post.html" class="btn btn-primary btn-sm py-3 px-4 small">Read The Transcript</a></p>
-
-            <div class="player">
-              <audio id="player2" preload="none" controls style="max-width: 100%">
-                <source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
-              </audio>
-            </div>
-
+            <h2 class="text-white font-weight-light mb-2 display-4">Episode 00 <br/> Introduction: <br/> A new beinging</h2>
+            <div class="text-white mb-4"><span class="text-white-opacity-05"><small>By Alex 'Yetalon' | 21 November 2021</small></span></div>
+            <p><a href="single-post.html" class="btn btn-primary btn-sm py-3 px-4 small">Listen Here</a></p>
           </div>
         </div>
       </div>
