--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center"
           <div class="col-md-7" data-aos="fade-up" data-aos-delay="400">
+          <hr width="40%" color="black" align="left" noshade=""> <p><b/> The </p> <hr width="40%" color="black" align="right" noshade="">
             <h2 class="text-white font-weight-light mb-2 display-4">Sparking The Fire Podcast</h2>
-          </div>
+             <hr width="25%" color="black" align="left" noshade=""> <p><b/> The Journey of Young Fighters </p> <hr width="25%" color="black" align="right" noshade="">
+              <p> in a DnD campaign </p>
+             </div>
         </div
       </div>
     </div>  
