--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     </div>
 
     <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5"> 
-      <div class="container">
-        <div class="row align-items-center justify-content-center text-center"
-          <div class="col-md-7" data-aos="fade-up" data-aos-delay="400">
-          <hr width="40%" color="black" align="left" noshade=""> <p><b/> The </p> <hr width="40%" color="black" align="right" noshade="">
-            <h2 class="text-white font-weight-light mb-2 display-4">Sparking The Fire Podcast</h2>
-             <hr width="25%" color="black" align="left" noshade=""> <p><b/> The Journey of Young Fighters </p> <hr width="25%" color="black" align="right" noshade="">
-              <p> in a DnD campaign </p>
-             </div>
-        </div
-      </div>
+        <div class="container">
+            <div class="row align-items-center justify-content-center text-center"
+            <div class="col-md-7" data-aos="fade-up" data-aos-delay="400">
+            <hr width="45%" color="black" align="left" noshade=""> <h2 class="text-white font-weight-light display-4"> The </h2> <hr width="45%" color="black" align="right" noshade="">
+            <hr width="15%" color="black" align="left" noshade=""> <h2 class="text-white font-weight-light display-4"> Sparking The Fire Podcast  </h2> <hr width="15%" color="black" align="right" noshade="">
+            <hr width="10%" color="black" align="left" noshade=""> <h2 class="text-white font-weight-light display-4"> The Jouney of Young Fighters </h2> <hr width="10%" color="black" align="right" noshade="">
+            <p> in a DnD campaign </p>
+            </div>
+            </div
+        </div>
     </div>  
 
    
