--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
-    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade" data-stellar-background-ratio="0.5"> 
+    <div class="site-blocks-cover overlay inner-page-cover" style="background-image: url(images/gif_1.gif);" data-aos="fade" data-stellar-background-ratio="0.5"> 
         <div class="container">
-            <div class="row align-items-center justify-content-center text-center"
+            <div class="justify-content-center text-center"
             <div class="col-md-7" data-aos="fade-up" data-aos-delay="400">
             <hr width="45%" color="black" align="left" noshade=""> <h2 class="text-white font-weight-light display-4"> The </h2> <hr width="45%" color="black" align="right" noshade="">
-            <hr width="15%" color="black" align="left" noshade=""> <h2 class="text-white font-weight-light display-4"> Sparking The Fire Podcast  </h2> <hr width="15%" color="black" align="right" noshade="">
+            <h2 class="text-white font-weight-light display-4"> Sparking The Fire Podcast  </h2> 
             <hr width="10%" color="black" align="left" noshade=""> <h2 class="text-white font-weight-light display-4"> The Jouney of Young Fighters </h2> <hr width="10%" color="black" align="right" noshade="">
             <p> in a DnD campaign </p>
             </div>
@@ -354,7 +354,6 @@
       </div>
     </div>
     <img scr="images/Favicon.png">
-<rssapp-wall id="xSFkhKnka3GDRECg"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
