--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="row" data-aos="fade-up">
           <div class="col-md-12">
-            <img src="images/hero_bg_1.jpg" alt="Image" class="img-fluid mb-5">
+            <img src="images/hero_bg_1.png" alt="Image" class="img-fluid mb-5">
           </div>
           <div class="col-md-6" style=margin:auto;>
             <p> The podcast is going to be a DnD podcast that will have multiple seasons with varying ways of playing DnD. For our first season, we will be starting in a natural DnD setting. However, it will still have a twist as we are going to be in a Mortal Kombat like fighting tournament.  Each season will be varying in what the main topic is and what characters we play. We may also switch DM's every season just to keep it extra spicy.</p>
